--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                     <i onclick="hide_menu()" class="flaticon-cancel"></i>
                 </span>
                 <ul>
-                    <li><a onclick="hide_menu()" href="#home">Home</a></li>
-                    <li><a onclick="hide_menu()" href="#about">Specialization</a></li>
-                    <li><a onclick="hide_menu()" href="#resume">Resume</a></li>
-                    <li><a onclick="hide_menu()" href="#portfolio">Projects</a></li>
-                    <li><a onclick="hide_menu()" href="#textimonial">Reviews</a></li>
-                    <li><a onclick="hide_menu()" href="#contact">Contact</a></li>
+                    <li><a onclick="hide_menu()" href="#Inicio">Home</a></li>
+                    <li><a onclick="hide_menu()" href="#Sobre mí">Specialization</a></li>
+                    <li><a onclick="hide_menu()" href="#Currículum">Resume</a></li>
+                    <li><a onclick="hide_menu()" href="#Portafolio">Projects</a></li>
+<!--                     <li><a onclick="hide_menu()" href="#textimonial">Reviews</a></li>
+                    <li><a onclick="hide_menu()" href="#Contacto">Contact</a></li> -->
                 </ul>
             </div>
         </div>
